--- a/blogpost.html
+++ b/blogpost.html
@@ -7,5 +7,18 @@
         <h1>aqui vamos a hacer un blog post</h1>
         <p>y este es el parrafo de inicio</p>
     </body>
+        <div id="container">
+            <div id ="post">
+                <h1>Este es el titulo atractivo 
+                    e interesante del post</h1>
+                <p>Y este es el parragrafo de
+                    inicio donde vamos a explicar
+                    las coosas increibles que se pueden 
+                    hacer</p>
+
+            </div>
+        
+        
+        </div>
 
 </html>
