--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,12 @@
                     inicio donde vamos a explicar
                     las coosas increibles que se pueden 
                     hacer</p>
+                    <p>Los blogs son la mejor forma de compartir 
+                        información y tus ideas. Mucho mas que ir a
+                         conferencias o salir en Youtube. Excepto si
+                          eres un rockstar.
+                         Pero estadísticamente no lo eres.... 
+                         por ahora.</p>
 
             </div>
         
