--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id ="post">
-                <h1>Este es el titulo atractivo 
+                <h1>Este es el título atractivo 
                     e interesante del post </h1>
                 <p>Y este es el parragrafo de
                     inicio donde vamos a explicar
