Agregue una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,7 @@
                     inicio donde vamos a explicar
                     las coosas increibles que se pueden 
                     hacer</p>
+                    <p><img src="imagenes/Socket.jpg" width="100" /> </p>
                     <p>Los blogs son la mejor forma de compartir 
                         información y tus ideas. Mucho mas que ir a
                          conferencias o salir en Youtube. Excepto si
